# dynamic-alias

./: .gitignore  README.md  SECURITY.md  dya.yaml.sample  dya_dev.py  pyproject.toml  requirements.txt
.agent/rules/: config-file-rules.md  global-system-rules.md  global-test-rules.md
packaging/deb/: stdeb.cfg
packaging/rpm/: dynamic-alias.spec
src/dynamic_alias/: cache.py  completer.py  config.py  executor.py  main.py  models.py  resolver.py  shell.py
tests/: conftest.py  test_cache_ttl.py  test_completer.py  test_dynamic_config.py  test_helper.py  test_history.py  test_integration.py  test_style_config.py  test_timeout.py
